# AI-Based-Crime-Pattern-Analyzer

./: .gitignore  README.md  architecture-review.md  demo_crime_dataset.csv  new_crime_data.csv  package.json  sample_crimes.csv
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py  supabase_client.py
backend/app/repositories/: analysis.py  analytics.py  datasets.py  incidents.py
backend/app/routers/: analysis.py  analytics.py  datasets.py  incidents.py
docs/: PRD.md  architecture-v2.md  architecture.md  database-schema.md  schema-v1.sql  tasks.md  updated-tasks.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
supabase/: seed.sql
supabase/migrations/: 202606020001_enable_extensions.sql  202606020002_create_schema.sql  202606020003_create_indexes.sql  202606020004_enable_rls_policies.sql  202606020005_datasets_management.sql  202606020006_allow_null_dataset_owner.sql  202606030001_create_incidents_ingestion.sql
