[project]
name = "crimelens-backend"
version = "0.1.0"
description = "FastAPI backend for CrimeLens."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.0",
    "supabase>=2.10.0"
]

[dependency-groups]
dev = []

[tool.uv]
package = false
